--- a/i18n/de_AT.csv
+++ b/i18n/de_AT.csv
@@ -1,2 +1,2 @@
-"You have ordered but not yet paid","Noch ein Schritt zum erfolgreichen Einkauf"
+"You have ordered but not yet paid","Bestellung bezahlen und Einkauf abschließen"
 "cashpresso: please fill all data.","cashpresso: Bitte Raten auswählen"
